@@ -94,6 +94,7 @@ plugin_def("export_dxf",       "DXF pcb_exporter",                sbuildin, 1, 0
 plugin_def("export_excellon",  "Excellon drill exporter",         sbuildin, 1, 0)
 plugin_def("export_fidocadj",  "FidoCadJ .fcd pcb_exporter",      sbuildin, 1, 0)
 plugin_def("export_gcode",     "gcode pcb_exporter",              sbuildin, 1, 0)
+plugin_def("export_gcode",     "gcode pcb_exporter",              sbuildin, 1, 0)
 plugin_def("export_gerber",    "Gerber pcb_exporter",             sbuildin, 1, 0)
 plugin_def("export_ipcd356",   "IPC-D-356 Netlist pcb_exporter",  sbuildin, 1, 0)
 plugin_def("export_lpr",       "lpr pcb_exporter (printer)",      sbuildin, 1, 0)
@@ -141,6 +142,7 @@ plugin_dep("dialogs", "lib_hid_common", 0)
 plugin_dep("dialogs", "lib_hid_pcbui", 0)
 plugin_dep("draw_fab", "report", 0)
 plugin_dep("export_fidocadj", "lib_compat_help", 0)
+plugin_dep("export_gcode", "millpath", 0)
 plugin_dep("export_gerber", "export_excellon", 0)
 plugin_dep("export_ipcd356", "lib_compat_help", 0)
 plugin_dep("export_lpr", "export_ps", 0)
